@@ -3,6 +3,7 @@
 - bugfix of problem introduced with r4342 by replacing strlen() with isset()
 - add environment configuration issue with mbstring.func_overload Smarty cannot compensate for (Issue #45)
 - bugfix nofilter tag option did not disable default modifier
+- bugfix html_options plugin did not handle null- and object values properly (Issue #49, Forum Topic 20049)
 
 04.10.2011
 - bugfix assign() in plugins called in subtemplates did change value also in parent template
